# project3

./: .env.example  .flake8  README.md  mylog.txt  pyproject.toml
src/: decorators.py  external_api.py  generators.py  masks.py  mylog.txt  processing.py  reading_files.py  utils.py  widget.py
tests/: conftest.py  mylog.txt  test.py  test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_reading_files.py  test_utils.py  test_widget.py
