[tool.poetry]
name = "project3"
version = "0.1.0"
description = ""
authors = ["Zharkov Aleksey <gross3000@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
requests = "^2.32.4"
flake8 = "^7.2.0"
mypy = "^1.16.1"
black = "^25.1.0"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
