[tool.poetry]
name = "project3"
version = "0.1.0"
description = ""
authors = ["Zharkov Aleksey <gross3000@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.0"
python-dotenv = "^1.1.1"
poetry-core = "^2.1.3"
requests = "^2.32.4"
pandas = "2.3.1"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"
mypy = "^1.16.1"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
